--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,8 @@ body{
     margin: 0;          
     padding: 0;   
     font-family: Arial, sans-serif; 
-    font-size: 16px;        
+    font-size: 16px;
+    font-weight: bold;        
     line-height: 1.5; 
     background-color: #C2D5DB;
 }
